Added some meta data to the 404 page and a helpful sentence.

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,2 +1,15 @@
+---
+title: 404
+meta:
+  - name: description
+    content: Ethereum is a global, decentralized platform for money and new kinds of applications. On Ethereum, you can write code that controls money, and build applications accessible anywhere in the world.
+  - property: og:title
+    content: Home | Ethereum
+  - property: og:description
+    content: Ethereum is a global, decentralized platform for money and new kinds of applications. On Ethereum, you can write code that controls money, and build applications accessible anywhere in the world.
+lang: en-US
+---
 
-Oh noes! It's a 4-oh-4!
+# Oh noes! It's a 4-oh-4!
+
+Please use the search box above to find what you're looking for.
