--- a/docs/de/404.md
+++ b/docs/de/404.md
@@ -1,2 +1,8 @@
+---
+title: 404
+lang: de-DE
+---
 
-Oh nein! Das ist ein 4-oh-4!
+# Oh nein! Das ist ein 4-null-4!
+
+Bitte nutze das Suchfeld oberhalb um zu finden was du suchst.
