- text changes in english and german

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,5 +1,5 @@
 ---
-title: 404
+title: Not Found
 meta:
   - name: description
     content: Ethereum is a global, decentralized platform for money and new kinds of applications. On Ethereum, you can write code that controls money, and build applications accessible anywhere in the world.
@@ -10,6 +10,6 @@ meta:
 lang: en-US
 ---
 
-# Oh noes! It's a 4-oh-4!
+# Not Found
 
-Please use the search box above to find what you're looking for.
+Please use the search box above to find what you're looking for or [return home](/).
