--- a/docs/de/404.md
+++ b/docs/de/404.md
@@ -1,8 +1,8 @@
 ---
-title: 404
+title: Nicht gefunden
 lang: de-DE
 ---
 
-# Oh nein! Das ist ein 4-null-4!
+# Nicht gefunden
 
-Bitte nutze das Suchfeld oberhalb um zu finden was du suchst.
+Bitte nutze das Suchfeld oberhalb um zu finden was du suchst oder [kehre zurück zum Start](/).
