move new files from CrowdIn/id/Contents v1.1

--- a/docs/translations/id/strings.json
+++ b/docs/translations/id/strings.json
@@ -2,10 +2,10 @@
   "brand-assets": "Aset merek",
   "contact": "Kontak",
   "ethereum": "Ethereum",
-  "developer-resources": "Sumber daya untuk Developer",
-  "get-started": "Mulailah",
+  "developer-resources": "Sumber daya untuk pengembang",
   "language-support": "Dukungan bahasa",
   "learn-more": "Pelajari lebih lanjut",
+  "get-started": "Mulai",
   "page-404-copy": "Anda bisa menggunakan kotak pencarian di atas untuk menemukan apa yang anda cari atau kembali ke beranda.",
   "page-404-not-found": "Tidak ditemukan",
   "page-beginners": "Pemula",
@@ -33,7 +33,9 @@
   "page-build-title": "Mulailah membangun dengan Ethereum",
   "page-build-try-button": "Coba sekarang juga",
   "page-developers": "Developer",
+  "page-developers-aria-label": "Menu Developer",
   "page-enterprise": "Perusahaan",
+  "page-community": "Komunitas Ethereum",
   "page-home": "Ethereum",
   "page-home-section-beginners-item-one": "Benar-benar baru di Ethereum?",
   "page-home-section-beginners-item-three": "Kenapa saya harus peduli?",
@@ -50,6 +52,8 @@
   "page-home-section-individuals-item-one": "Apa itu Ethereum?",
   "page-home-section-individuals-item-three": "Panduan & Sumber Daya",
   "page-home-section-individuals-item-two": "Menggunakan Etherum",
+  "page-home-section-individuals-item-four": "Apa itu Ether (ETH)?",
+  "page-home-section-individuals-item-five": "Wallet Ethereum",
   "page-home-section-individuals-title": "Untuk Individu",
   "page-home-section-learn-item-one": "Sumber daya untuk pemula",
   "page-home-section-learn-item-three": "ETH 2.0",
@@ -62,6 +66,7 @@
   "page-home-subtitle": "Di Ethereum, anda dapat menulis code yang mengontrol nilai digital, berjalan persis seperti yang diprogram, dan dapat diakses di mana saja di dunia.",
   "page-home-title": "Ethereum adalah platform global sumber terbuka untuk aplikasi yang terdesentralisasi.",
   "page-individuals": "Individu",
+  "page-individuals-aria-label": "Menu Individual",
   "page-last-updated": "Halaman terakhir kali diupdate",
   "page-learn": "Belajar",
   "page-use": "Penggunaan",
