Fix french strings.json

--- a/docs/translations/fr/strings.json
+++ b/docs/translations/fr/strings.json
@@ -38,18 +38,18 @@
   "page-community": "Ethereum Community",
   "page-home": "Ethereum",
   "page-home-section-beginners-item-one": "Tout nouveau à Ethereum ?",
-  "page-home-section-beginners-item-three": "En quoi est-ce que ça me concerne&nbsp;?",
+  "page-home-section-beginners-item-three": "En quoi est-ce que ça me concerne ?",
   "page-home-section-beginners-item-two": "Qu'est-ce qu'Ethereum&nbsp;?",
   "page-home-section-beginners-title": "Débutants",
   "page-home-section-developers-item-one": "Guides de démarrage",
   "page-home-section-developers-item-three": "Derniers outils de développement",
-  "page-home-section-developers-item-two": "Apprendre à programmer des <em>smart contracts<em>",
+  "page-home-section-developers-item-two": "Apprendre à programmer des smart contracts",
   "page-home-section-developers-title": "Pour les Développeurs",
   "page-home-section-enterprise-item-one": "Pourquoi Ethereum pour les entreprises ?",
   "page-home-section-enterprise-item-three": "Communauté de développeurs pour les entreprises",
   "page-home-section-enterprise-item-two": "Fonctionnalités pour les entreprises",
   "page-home-section-enterprise-title": "Pour les entreprises",
-  "page-home-section-individuals-item-one": "Qu'est-ce qu'Ethereum&nbsp;?",
+  "page-home-section-individuals-item-one": "Qu'est-ce qu'Ethereum ?",
   "page-home-section-individuals-item-three": "Guides & Ressources",
   "page-home-section-individuals-item-two": "Utiliser Ethereum",
   "page-home-section-individuals-item-four": "Qu'est-ce que Ether (ETH) ?",
@@ -61,7 +61,7 @@
   "page-home-section-learn-title": "Apprendre",
   "page-home-section-use-item-one": "Qu'est-ce que je peux faire avec Ethereum aujourd'hui ?",
   "page-home-section-use-item-three": "Qu'est-ce qu'un portefeuille ?",
-  "page-home-section-use-item-two": "Comment obtenir de l'Ether&nbsp;?",
+  "page-home-section-use-item-two": "Comment obtenir de l'Ether ?",
   "page-home-section-use-title": "Utiliser",
   "page-home-subtitle": "Sur Ethereum, vous pouvez écrire du code qui contrôle un actif numérique, qui s'exécute exactement comme il a été programmé et qui est accessible partout dans le monde.",
   "page-home-title": "Ethereum est une plate-forme globale et open-source pour des applications décentralisées.",
