Update Simplified Chinese to v1.1

--- a/docs/translations/zh/strings.json
+++ b/docs/translations/zh/strings.json
@@ -1,33 +1,75 @@
 {
-  "ethereum": "以太坊",
+  "brand-assets": "Brand assets",
+  "contact": "Contact",
+  "ethereum": "Ethereum",
+  "developer-resources": "开发者资源",
+  "language-support": "Language Support",
   "learn-more": "Learn more",
+  "get-started": "Get started",
+  "page-404-copy": "Please use the search box above to find what you're looking for or return home.",
+  "page-404-not-found": "Not found",
   "page-beginners": "初学者",
+  "page-build-chainshot-description": "Solidity, Vyper and Web3.js coding tutorials",
+  "page-build-coin-contract-description": "A starter dapp template that defines a basic fungible token you can create and send to others.",
+  "page-build-coin-contract-link-text": "Mint your token",
+  "page-build-coin-contract-title": "Coin Contract",
+  "page-build-collaboration": "Ethereum Studio is a collaboration between Superblocks and Ethereum.org.",
+  "page-build-consensys-academy-description": "Online Ethereum developer bootcamp",
+  "page-build-crypto-pizza-description": "A collectibles game built on top of the ERC-721 standard for creating unique tokens.",
+  "page-build-crypto-pizza-link-text": "See crypto pizza",
+  "page-build-crypto-pizza-title": "Crypto Pizza",
+  "page-build-cryptozombies-description": "Learn Solidity building your own Zombie game",
+  "page-build-ethernauts-description": "Complete levels by hacking smart contracts",
+  "page-build-h2": "Start coding right away, saving many hours of development setup. Try the following templates to see what you can build with Ethereum.",
+  "page-build-hello-world-description": "A Hello World style template that deploys a smart contract with a configurable message, and renders it to the browser.",
+  "page-build-hello-world-link-text": "Run hello world",
+  "page-build-hello-world-title": "Hello World",
+  "page-build-learn-more-cta": "Learn more about Ethereum",
+  "page-build-learn-more-description": "Want to learn more? Go to our learn page to find technical and non-technical articles, guides, and resources.",
+  "page-build-more-learning-title": "More web based learning experiences for ethereum",
+  "page-build-powered-by-superblocks": "Powered by Superblocks",
+  "page-build-remix-description": "Ethereum IDE and tools for the web",
+  "page-build-subtitle": "Learn the basics of Ethereum with Ethereum Studio, our web-based IDE where you can create and test smart contracts, and build a front end for them.",
+  "page-build-title": "Get started building on Ethereum",
+  "page-build-try-button": "Try it now",
   "page-developers": "开发者",
-  "page-home": "首页",
+  "page-developers-aria-label": "Developers' Menu",
+  "page-enterprise": "企业级应用",
+  "page-community": "Ethereum Community",
+  "page-home": "Ethereum",
   "page-home-section-beginners-item-one": "初识以太坊",
   "page-home-section-beginners-item-three": "以太坊的意义",
   "page-home-section-beginners-item-two": "以太坊简介",
   "page-home-section-beginners-title": "初学者",
   "page-home-section-developers-item-one": "入门指南",
-  "page-home-section-developers-item-three": "最新的开发者工具",
+  "page-home-section-developers-item-three": "Latest developer tools",
   "page-home-section-developers-item-two": "编写智能合约",
-  "page-home-section-developers-title": "开发者",
-  "page-home-section-enterprise-item-one": "",
-  "page-home-section-enterprise-item-three": "",
-  "page-home-section-enterprise-item-two": "",
-  "page-home-section-enterprise-title": "",
+  "page-home-section-developers-title": "For Developers",
+  "page-home-section-enterprise-item-one": "为什么选择企业级以太坊？",
+  "page-home-section-enterprise-item-three": "企业开发者社区",
+  "page-home-section-enterprise-item-two": "企业级应用特色",
+  "page-home-section-enterprise-title": "For Enterprise",
+  "page-home-section-individuals-item-one": "以太坊简介",
+  "page-home-section-individuals-item-three": "Guides & Resources",
+  "page-home-section-individuals-item-two": "Use Ethereum",
+  "page-home-section-individuals-item-four": "什么是以太币(ETH)？",
+  "page-home-section-individuals-item-five": "以太坊钱包",
+  "page-home-section-individuals-title": "For Individuals",
   "page-home-section-learn-item-one": "初学者资源",
   "page-home-section-learn-item-three": "ETH 2.0",
   "page-home-section-learn-item-two": "以太坊如何工作",
   "page-home-section-learn-title": "学习",
   "page-home-section-use-item-one": "我能用以太坊做什么",
-  "page-home-section-use-item-three": "什么是钱包？",
+  "page-home-section-use-item-three": "What's a wallet?",
   "page-home-section-use-item-two": "如何获得 ETH",
   "page-home-section-use-title": "使用",
   "page-home-subtitle": "在以太坊上，你可以通过编写代码管理数字资产、运行程序，更重要的是，这一切都不受地域限制。",
-  "page-home-title": "以太坊是一个为去中心化应用（Dapp）而生的全球开源平台。",
-  "page-last-updated": "页面上次更新",
+  "page-home-title": "以太坊是一个为去中心化应用（DApp）而生的全球开源平台。",
+  "page-individuals": "Individuals",
+  "page-individuals-aria-label": "Individual's Menu",
+  "page-last-updated": "Page last updated",
   "page-learn": "学习",
   "page-use": "使用",
-  "website-last-updated": "网站上次更新"
+  "privacy-policy": "Privacy policy",
+  "website-last-updated": "Website last updated"
 }
