--- a/docs/translations/zh/strings.json
+++ b/docs/translations/zh/strings.json
@@ -1,75 +1,75 @@
 {
-  "brand-assets": "Brand assets",
-  "contact": "Contact",
-  "ethereum": "Ethereum",
+  "brand-assets": "品牌资产",
+  "contact": "联系我们",
+  "ethereum": "以太坊",
   "developer-resources": "开发者资源",
-  "language-support": "Language Support",
-  "learn-more": "Learn more",
-  "get-started": "Get started",
-  "page-404-copy": "Please use the search box above to find what you're looking for or return home.",
-  "page-404-not-found": "Not found",
+  "language-support": "语言",
+  "learn-more": "查看更多",
+  "get-started": "开始体验",
+  "page-404-copy": "请使用上面的搜索框来查找您想要的信息或返回主页。",
+  "page-404-not-found": "未找到",
   "page-beginners": "初学者",
-  "page-build-chainshot-description": "Solidity, Vyper and Web3.js coding tutorials",
-  "page-build-coin-contract-description": "A starter dapp template that defines a basic fungible token you can create and send to others.",
-  "page-build-coin-contract-link-text": "Mint your token",
+  "page-build-chainshot-description": "Solidity, Vyper 和 Web3.js 编码教程",
+  "page-build-coin-contract-description": "入门去中心化应用程序模板，定义了您可以创建并发送给他人的基本同质化代币",
+  "page-build-coin-contract-link-text": "铸造您的代币",
   "page-build-coin-contract-title": "Coin Contract",
-  "page-build-collaboration": "Ethereum Studio is a collaboration between Superblocks and Ethereum.org.",
-  "page-build-consensys-academy-description": "Online Ethereum developer bootcamp",
-  "page-build-crypto-pizza-description": "A collectibles game built on top of the ERC-721 standard for creating unique tokens.",
-  "page-build-crypto-pizza-link-text": "See crypto pizza",
+  "page-build-collaboration": "Ethereum Studio是Superblock和Etherum.org合作开发创建的。",
+  "page-build-consensys-academy-description": "线上以太坊开发者训练营",
+  "page-build-crypto-pizza-description": "基于ERC-721标准开发的收藏品游戏，用于创建独一无二的代币",
+  "page-build-crypto-pizza-link-text": "查阅crypto pizza",
   "page-build-crypto-pizza-title": "Crypto Pizza",
-  "page-build-cryptozombies-description": "Learn Solidity building your own Zombie game",
-  "page-build-ethernauts-description": "Complete levels by hacking smart contracts",
-  "page-build-h2": "Start coding right away, saving many hours of development setup. Try the following templates to see what you can build with Ethereum.",
-  "page-build-hello-world-description": "A Hello World style template that deploys a smart contract with a configurable message, and renders it to the browser.",
-  "page-build-hello-world-link-text": "Run hello world",
+  "page-build-cryptozombies-description": "学习 Solidity，开发您自己的僵尸游戏",
+  "page-build-ethernauts-description": "通过破解智能合约来闯关",
+  "page-build-h2": "现在开始编程吧，这节省了很多个小时的开发设置。试试以下模板，看看用以太坊您能构建出什么？",
+  "page-build-hello-world-description": "Hello World模板，部署可配置消息的智能合约并将其呈现给浏览器",
+  "page-build-hello-world-link-text": "运行hello world",
   "page-build-hello-world-title": "Hello World",
-  "page-build-learn-more-cta": "Learn more about Ethereum",
-  "page-build-learn-more-description": "Want to learn more? Go to our learn page to find technical and non-technical articles, guides, and resources.",
-  "page-build-more-learning-title": "More web based learning experiences for ethereum",
-  "page-build-powered-by-superblocks": "Powered by Superblocks",
-  "page-build-remix-description": "Ethereum IDE and tools for the web",
-  "page-build-subtitle": "Learn the basics of Ethereum with Ethereum Studio, our web-based IDE where you can create and test smart contracts, and build a front end for them.",
-  "page-build-title": "Get started building on Ethereum",
-  "page-build-try-button": "Try it now",
+  "page-build-learn-more-cta": "进一步了解以太坊",
+  "page-build-learn-more-description": "想要了解更多？去我们的学习页面，阅读更多技术和非技术性文章、指南和资源。",
+  "page-build-more-learning-title": "更多基于网页的以太坊学习体验",
+  "page-build-powered-by-superblocks": "Superblocks支持",
+  "page-build-remix-description": "以太坊IDE和网页工具",
+  "page-build-subtitle": "通过Ethereum Studio了解以太坊基础知识。以太坊Studio是基于网页的IDE，可以用来搭建及测试智能合约，并为其搭建一个前端",
+  "page-build-title": "现在开始在以太坊上创建吧",
+  "page-build-try-button": "开始",
   "page-developers": "开发者",
-  "page-developers-aria-label": "Developers' Menu",
+  "page-developers-aria-label": "开发者菜单",
   "page-enterprise": "企业级应用",
-  "page-community": "Ethereum Community",
-  "page-home": "Ethereum",
+  "page-community": "以太坊社区",
+  "page-home": "以太坊",
   "page-home-section-beginners-item-one": "初识以太坊",
   "page-home-section-beginners-item-three": "以太坊的意义",
   "page-home-section-beginners-item-two": "以太坊简介",
   "page-home-section-beginners-title": "初学者",
   "page-home-section-developers-item-one": "入门指南",
-  "page-home-section-developers-item-three": "Latest developer tools",
-  "page-home-section-developers-item-two": "编写智能合约",
-  "page-home-section-developers-title": "For Developers",
+  "page-home-section-developers-item-three": "最新开发者工具",
+  "page-home-section-developers-item-two": "学习编写智能合约",
+  "page-home-section-developers-title": "面向开发者",
   "page-home-section-enterprise-item-one": "为什么选择企业级以太坊？",
   "page-home-section-enterprise-item-three": "企业开发者社区",
   "page-home-section-enterprise-item-two": "企业级应用特色",
-  "page-home-section-enterprise-title": "For Enterprise",
+  "page-home-section-enterprise-title": "面向企业",
   "page-home-section-individuals-item-one": "以太坊简介",
-  "page-home-section-individuals-item-three": "Guides & Resources",
-  "page-home-section-individuals-item-two": "Use Ethereum",
+  "page-home-section-individuals-item-three": "指南和资源",
+  "page-home-section-individuals-item-two": "使用以太坊",
   "page-home-section-individuals-item-four": "什么是以太币(ETH)？",
   "page-home-section-individuals-item-five": "以太坊钱包",
-  "page-home-section-individuals-title": "For Individuals",
+  "page-home-section-individuals-title": "面向个人",
   "page-home-section-learn-item-one": "初学者资源",
   "page-home-section-learn-item-three": "ETH 2.0",
-  "page-home-section-learn-item-two": "以太坊如何工作",
+  "page-home-section-learn-item-two": "以太坊如何运行",
   "page-home-section-learn-title": "学习",
   "page-home-section-use-item-one": "我能用以太坊做什么",
-  "page-home-section-use-item-three": "What's a wallet?",
-  "page-home-section-use-item-two": "如何获得 ETH",
+  "page-home-section-use-item-three": "什么是钱包？",
+  "page-home-section-use-item-two": "如何获得ETH？",
   "page-home-section-use-title": "使用",
   "page-home-subtitle": "在以太坊上，你可以通过编写代码管理数字资产、运行程序，更重要的是，这一切都不受地域限制。",
-  "page-home-title": "以太坊是一个为去中心化应用（DApp）而生的全球开源平台。",
-  "page-individuals": "Individuals",
-  "page-individuals-aria-label": "Individual's Menu",
-  "page-last-updated": "Page last updated",
+  "page-home-title": "以太坊是一个为去中心化应用程序而生的全球开源平台。",
+  "page-individuals": "个人",
+  "page-individuals-aria-label": "个人菜单",
+  "page-last-updated": "页面最后更新",
   "page-learn": "学习",
   "page-use": "使用",
-  "privacy-policy": "Privacy policy",
-  "website-last-updated": "Website last updated"
+  "privacy-policy": "隐私政策",
+  "website-last-updated": "网站最后更新"
 }
